--- a/src/Modules/Evently.Modules.Attendance.Presentation/Evently.Modules.Attendance.Presentation.csproj
+++ b/src/Modules/Evently.Modules.Attendance.Presentation/Evently.Modules.Attendance.Presentation.csproj
@@ -6,4 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Attendees\" />
+    <Folder Include="Events\" />
+    <Folder Include="EventStatistics\" />
+    <Folder Include="Tickets\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Attendance\Evently.Modules.Attendance.Application\Evently.Modules.Attendance.Application.csproj" />
+    <ProjectReference Include="..\Attendance\Evently.Modules.Attendance.IntegrationEvents\Evently.Modules.Attendance.IntegrationEvents.csproj" />
+    <ProjectReference Include="..\Events\Evently.Modules.Events.IntegrationEvents\Evently.Modules.Events.IntegrationEvents.csproj" />
+    <ProjectReference Include="..\Ticketing\Evently.Modules.Ticketing.IntegrationEvents\Evently.Modules.Ticketing.IntegrationEvents.csproj" />
+    <ProjectReference Include="..\Users\Evently.Modules.Users.IntegrationEvent\Evently.Modules.Users.IntegrationEvent.csproj" />
+  </ItemGroup>
+
 </Project>
