--- a/evently/docker-compose.yml
+++ b/evently/docker-compose.yml
@@ -75,3 +75,11 @@ services:
       - "27017:27017"
     volumes:
       - ./db_data/:/data/db/
+
+  evently.jaeger:
+     image: jaegertracing/all-in-one
+     container_name: Evently.Jaeger
+     ports:
+       - 4317:4317
+       - 4318:4318
+       - 16686:16686
