--- a/evently/src/API/Evently.Api/appsettings.Development.json
+++ b/evently/src/API/Evently.Api/appsettings.Development.json
@@ -27,7 +27,15 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Information"
+        "Microsoft": "Information",
+        "Evently.Modules.Attendance.Infrastructure.Outbox": "Warning",
+        "Evently.Modules.Attendance.Infrastructure.Inbox": "Warning",
+        "Evently.Modules.Events.Infrastructure.Outbox": "Warning",
+        "Evently.Modules.Events.Infrastructure.Inbox": "Warning",
+        "Evently.Modules.Ticketing.Infrastructure.Outbox": "Warning",
+        "Evently.Modules.Ticketing.Infrastructure.Inbox": "Warning",
+        "Evently.Modules.Users.Infrastructure.Outbox": "Warning",
+        "Evently.Modules.Users.Infrastructure.Inbox": "Warning"
       }
     },
     "WriteTo": [
@@ -41,7 +49,8 @@
     "Properties": {
       "Application": "Evently.Api"
     }
-  }
+  },
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://evently.jaeger:4317"
   //"Logging": {
   //  "LogLevel": {
   //    "Default": "Information",
